[tool.poetry]
name = "spray365"
version = "0.2.2"
description = "Spray365 makes spraying Microsoft accounts (Office 365 / Azure AD) easy through its customizable two-step password spraying approach."
readme = "README.md"
homepage = "https://github.com/MarkoH17/Spray365"
repository = "https://github.com/MarkoH17/Spray365"
authors = ["MarkoH17 <you@example.com>"]
exclude = ["tests"]
include = ["LICENSE"]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [{ include = "spray365" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.*"
click-option-group = "0.5.*"
colorama = "0.4.*"
msal = "1.17.*"
urllib3 = "~=1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spray365 = 'spray365.spray365:cli'
s365 = 'spray365.spray365:cli'
